<resources>
    <string name="app_name">Smart Parents</string>
    <string name="org_name">Children At Risk</string>
    <string name="action_about">About</string>
    <string name="navigation_drawer_open" translatable="false">navdrawer open</string>
    <string name="navigation_drawer_close" translatable="false">navdrawer close</string>

    <!--    Strings used for fragments for navigation-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="exit_dialog">Do you wish to exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!--    Toolbar Titles-->
    <string name="home_menu">Home</string>
    <string name="health_nutrition_menu">Health and Nutrition</string>
    <string name="k12_education_menu">K-12 Education</string>
    <string name="child_safety_menu">Child Safety</string>
    <string name="ec_education_menu">Early Childhood Education</string>
    <string name="hotline_menu">Hotlines</string>
    <string name="notes_menu">Notes</string>

    <!--    About page-->
    <string name="about_app_region">This app is primarily targeted at Texas parents. Many of the
        resources provided are applicable to areas outside Texas, but some are specifically
        relevant to Texas. Please keep this in mind.</string>
    <string name="legal_info">All copyrights belong to their respective owners.\nProgramed by
        Eli Weiss for Children at Risk.</string>
    <string name="about_org">CHILDREN AT RISK serves as a catalyst for change to improve the
        quality of life for children through research, policy analysis, education, collaboration,
        and advocacy.</string>

    <!--    Web view menu-->
    <string name="close_web_view">Close</string>
    <string name="refresh_web_view">Refresh</string>
    <string name="external_browser">Open in default browser</string>
    <string name="web_forward">Forward</string>
    <string name="web_back">Back</string>

    <!--    Home page-->
    <string name="smartparents_web_info">Visit the full website at</string>
    <string name="car_logo_info">Powered by</string>

    <!--    Health and Nutrition page-->
    <string name="health_button1_label">You have rights:\nProtect your Health</string>
    <string name="health_button2_label">CDC Parenting Information</string>
    <string name="nutrition_button1_label">Find a Food Bank</string>
    <string name="nutrition_button2_label">Find School Meals</string>
    <string name="nutrition_button3_label">No-Cost Meals for\n Kids in Houston</string>

    <string name="health_button1_desc">Health information and resources for immigrant families.</string>
    <string name="health_button2_desc">A collection of CDC suggested health resources for parents</string>
    <string name="nutrition_button1_desc">Find your local food bank by entering your zip code and
        state at this webpage.</string>
    <string name="nutrition_button2_desc">Find school meals near you using this interactive map</string>
    <string name="nutrition_button3_desc">Find locations with no-cost meals for children in Houston</string>

    <!--    K-12 Education page-->
    <string name="k12education_button1_label">Texas School Guide</string>
    <string name="k12education_button2_label">Questions to Ask\nWhen Visiting a School</string>
    <string name="k12education_button3_label">Building Gold Ribbon Schools</string>
    <string name="k12education_button4_label">College Ready Checklist</string>
    <string name="k12education_button5_label">Parent Action Guide</string>

    <string name="k12education_button1_desc">Want to Know the Quality of Schools Near You? Use
        this tool to search and compare Texas schools.</string>
    <string name="k12education_button2_desc">A list of questions for parents to ask while visiting
        schools.</string>
    <string name="k12education_button3_desc">Quality school practices that can be adopted by
        campuses and that parents can advocate for. </string>
    <string name="k12education_button4_desc">This checklist helps parents track actions to support
        children throughout their education by grade.</string>
    <string name="k12education_button5_desc">This guide provides tips and actions parents can take
        to support their child’s academic success.</string>

    <!--    Child Safety page-->
    <string name="child_safety_button1_label">Child Safety Online</string>
    <string name="child_safety_button2_label">Fire Safety</string>
    <string name="child_safety_button3_label">Swimming and Water Safety</string>

    <string name="child_safety_button1_desc">Keeping kids safe from fires: materials to learn more
        about discussing fire safety with children.</string>
    <string name="child_safety_button2_desc">Some good rules of thumb for parents to ensure their
        children’s safety online.</string>
    <string name="child_safety_button3_desc">Water safety resources for families and children.</string>

    <!--    Parenting page-->
    <string name="eceducation_button1_label">Find Child Care</string>
    <string name="eceducation_button2_label">Childcare Aware Texas</string>
    <string name="eceducation_button3_label">Frontline Child Care Texas</string>
    <string name="eceducation_button4_label">Childcare Desert Map</string>
    <string name="eceducation_button5_label">Child Care Checklist</string>

    <string name="eceducation_button1_desc">Find a child care center or home near you.</string>
    <string name="eceducation_button2_desc">Local CCR&amp;Rs can help families find child care options
        near their home or work.</string>
    <string name="eceducation_button3_desc">This portal help frontline essential workers find
        available child care near their home or work.</string>
    <string name="eceducation_button4_desc">View this map to explore child care deserts and the
        access landscape across the state of Texas.</string>
    <string name="eceducation_button5_desc">This checklist will help you recognize quality and
        make informed decisions when choosing child care.</string>

    <!--    COVID-19 page-->
<!--    <string name="covid_button1_label">BLAH</string>-->

    <!--    Hotline page-->
    <string name="emergency_title">Emergency Help</string>
    <string name="emergency_call">In a life threatening emergency, call 911.</string>
    <string name="non_emergency_title">Non-emergency Help</string>
    <string name="government_affiliation">Contact information listed belong to not-for-profit
        organizations and are not government agencies or government affiliated.</string>
    <string name="parent_hotline_label">National Parent Helpline</string>
    <string name="parent_hotline_number" translatable="false">1–855–427–2736</string>
    <string name="parent_hotline_times">Available M-F 10am-7pm PST</string>
    <string name="poison_control_label">Poison Control</string>
    <string name="poison_control_number" translatable="false">1–800–222–1222</string>
    <string name="human_trafficking_hotline_label">Human Trafficking Hotline</string>
    <string name="human_trafficking_hotline_number" translatable="false">1–888–373–7888</string>

    <!--    Notes page-->
    <string name="notes_tooltip_entry">Type your notes here! Don\'t forget to save.</string>

</resources>