<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildSafetyFragment">

    <Button
        android:id="@+id/child_safety_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="childSafetyButton1Click"
        android:text="@string/child_safety_button1_label"
        app:layout_constraintEnd_toEndOf="@+id/child_safety_button2"
        app:layout_constraintStart_toStartOf="@+id/child_safety_button2"
        app:layout_constraintTop_toBottomOf="@+id/child_safety_button2" />

    <Button
        android:id="@+id/child_safety_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="childSafetyButton2Click"
        android:text="@string/child_safety_button2_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/child_safety_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="childSafetyButton3Click"
        android:text="@string/child_safety_button3_label"
        app:layout_constraintEnd_toEndOf="@+id/child_safety_button1"
        app:layout_constraintStart_toStartOf="@+id/child_safety_button1"
        app:layout_constraintTop_toBottomOf="@+id/child_safety_button1" />

    <TextView
        android:id="@+id/child_safety_button2_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/child_safety_button1_desc"
        app:layout_constraintEnd_toEndOf="@+id/child_safety_button2"
        app:layout_constraintStart_toStartOf="@+id/child_safety_button2"
        app:layout_constraintTop_toBottomOf="@+id/child_safety_button2" />

    <TextView
        android:id="@+id/child_safety_button1_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/child_safety_button2_desc"
        app:layout_constraintEnd_toEndOf="@+id/child_safety_button1"
        app:layout_constraintStart_toStartOf="@+id/child_safety_button1"
        app:layout_constraintTop_toBottomOf="@+id/child_safety_button1" />

    <TextView
        android:id="@+id/child_safety_button3_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/child_safety_button3_desc"
        app:layout_constraintEnd_toEndOf="@+id/child_safety_button3"
        app:layout_constraintStart_toStartOf="@+id/child_safety_button3"
        app:layout_constraintTop_toBottomOf="@+id/child_safety_button3" />

</androidx.constraintlayout.widget.ConstraintLayout>