<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ECEducationFragment">

    <Button
        android:id="@+id/eceducation_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="ecEducationButton1Click"
        android:text="@string/eceducation_button1_label"
        app:layout_constraintEnd_toEndOf="@+id/eceducation_button5"
        app:layout_constraintStart_toStartOf="@+id/eceducation_button5"
        app:layout_constraintTop_toBottomOf="@+id/eceducation_button5" />

    <Button
        android:id="@+id/eceducation_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="ecEducationButton2Click"
        android:text="@string/eceducation_button2_label"
        app:layout_constraintEnd_toEndOf="@+id/eceducation_button4"
        app:layout_constraintStart_toStartOf="@+id/eceducation_button4"
        app:layout_constraintTop_toBottomOf="@+id/eceducation_button4" />

    <Button
        android:id="@+id/eceducation_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="ecEducationButton3Click"
        android:text="@string/eceducation_button3_label"
        app:layout_constraintEnd_toEndOf="@+id/eceducation_button2"
        app:layout_constraintStart_toStartOf="@+id/eceducation_button2"
        app:layout_constraintTop_toBottomOf="@+id/eceducation_button2" />

    <Button
        android:id="@+id/eceducation_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="ecEducationButton4Click"
        android:text="@string/eceducation_button4_label"
        app:layout_constraintEnd_toEndOf="@+id/eceducation_button1"
        app:layout_constraintStart_toStartOf="@+id/eceducation_button1"
        app:layout_constraintTop_toBottomOf="@+id/eceducation_button1" />

    <Button
        android:id="@+id/eceducation_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:onClick="ecEducationButton5Click"
        android:text="@string/eceducation_button5_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>